--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,7 +27,15 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.soccerTeam {
+  width: 250px;
+  border: 1px solid orangered;
+  padding: 20px;
+  margin: 20px;
 }
